--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,53 @@
-name: Hello World Deployment
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: [main]
+    branches: [ main, master ]
+  pull_request:
+    branches: [ main, master ]
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
         
       - name: Setup Pages
         uses: actions/configure-pages@v3
         
-      - name: Upload site
+      - name: Build (Static HTML - no build needed)
+        run: |
+          echo "🛠️ No build process needed for static HTML"
+          echo "📁 Files in repository:"
+          ls -la
+          
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: .
-          
-      - name: Deploy
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
